--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@fontsource/roboto": "^5.0.12",
     "@heroicons/react": "^2.1.3",
+    "@mui/icons-material": "^5.15.14",
+    "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
     "framer-motion": "^11.0.24",
     "next": "latest",
