--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.14",
     "@nextui-org/react": "^2.2.10",
+    "framer-motion": "^11.0.26",
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0"
